Fixed spacing.  Fixed negative number error.

--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -32,7 +32,7 @@
                             </ul>
                         </div>
                         {% endif %}
-                        <div class="col-6 col-lg-3">
+                        <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
                                 <label class="form-check-label" for={{ size_form.size_small.id_for_label }}>
                                     {{ size_form.size_small.label }}
@@ -41,7 +41,7 @@
                                 {{ size_form.size_small }}
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3">
+                        <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
                                 <label class="form-check-label" for={{ size_form.size_medium.id_for_label }}>
                                     {{ size_form.size_medium.label }}
@@ -50,7 +50,7 @@
                                 {{ size_form.size_medium }}
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3">
+                        <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
                                 <label class="form-check-label" for={{ size_form.size_large.id_for_label }}>
                                     {{ size_form.size_large.label }}
@@ -59,7 +59,7 @@
                                 {{ size_form.size_large }}
                             </div>
                         </div>
-                        <div class="col-6 col-lg-3">
+                        <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
                                 <label class="form-check-label" for={{ size_form.size_set.id_for_label }}>
                                     {{ size_form.size_set.label }}
