Updated spacing added qnt as placeholder, added min and max to quantity.

--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <section id="heading" class="text-center">
-    <h1 class="blue-font">Bespoke Vintage Shipping</h1>
+    <h1 class="blue-font pt-3">Bespoke Vintage Shipping</h1>
     <p class="blue-font">Tell us about the piece, enter your address, get an instant quote</p>
     <div class="list-group list-group-horizontal-md orange-font vintage-font" id="list-tab" role="tablist">
         <a class="vintage-list-item list-group-item list-group-item-action active" id="list-size-list" data-toggle="list" href="#list-size" role="tab" aria-controls="size"><span style="font-size: larger;">1 Size of piece</span></a>
