--- a/seller/templates/seller-add-product.html
+++ b/seller/templates/seller-add-product.html
@@ -6,7 +6,7 @@
     </script>
 {% endblock %}
 {% block content %}
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
         <div class="container" id="product-defaults">
             <table class="table table-sm table-striped">
@@ -15,16 +15,12 @@
         </div>
         <div class="container pt-5" id="product-categories">
             <table class="table table-sm table-striped">
-                {% for category in category_formset %}
-                {{ category.as_table }}
-                {% endfor %}
+                {{ category_formset }}
             </table>
         </div>
         <div class="container pt-5" id="product-images">
             <table class="table table-sm table-striped">
-                {% for image_form in image_formset %}
-                    {{ image_form.as_table }}
-                {% endfor %}
+                {{ image_formset }}
             </table>
         </div>
         <input class="btn btn-primary blue-button rounded-3 mb-5 mt-2" type="submit" value="Add Product">
