addition of descriptions for each product being shipped

--- a/bespokeShipping/templates/bespoke_shipping.html
+++ b/bespokeShipping/templates/bespoke_shipping.html
@@ -40,6 +40,9 @@
                                 {{ size_form.size_small.tag }}
                                 {{ size_form.size_small }}
                             </div>
+                            <div class="pt-2 w-100">
+                                {{ size_form.small_description }}
+                            </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
@@ -48,6 +51,9 @@
                                 </label>
                                 {{ size_form.size_medium.tag }}
                                 {{ size_form.size_medium }}
+                            </div>
+                            <div class="pt-2 w-100">
+                                {{ size_form.medium_description }}
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-3 pt-3">
@@ -58,6 +64,9 @@
                                 {{ size_form.size_large.tag }}
                                 {{ size_form.size_large }}
                             </div>
+                            <div class="pt-2 w-100">
+                                {{ size_form.large_description }}
+                            </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-3 pt-3">
                             <div class="size-form-check text-center">
@@ -66,6 +75,9 @@
                                 </label>
                                 {{ size_form.size_set.tag }}
                                 {{ size_form.size_set }}
+                            </div>
+                            <div class="pt-2 w-100">
+                                {{ size_form.set_description }}
                             </div>
                         </div>
                     </div>
