Add QR grid to account menu

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -65,6 +65,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:product-list' %}">My Products</a>
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:add-product' %}">Add Product</a>
+                            <a class="dropdown-item dropdown-item-blue" href="{% url 'products:qr-grid' %}">Product QR Grid</a>
                         </div>
                     </li>
                     {% else %}
