--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -54,11 +54,7 @@
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'store:our-purpose-retail' %}">Retail</a>
                         </div>
                     </li>{% endcomment %}
-                    {% if user.is_authenticated != True %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'bespoke-shipping:create-by-seller-id' 'unknown' %}">Ship</a></li>
-                    {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'bespoke-shipping:create' %}">Ship</a></li>
-                    {% endif %}
                     {%  if user.is_authenticated %}
                     {% if user|is_seller %}
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Account</a>
@@ -66,6 +62,7 @@
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:product-list' %}">My Products</a>
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'seller:add-product' %}">Add Product</a>
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'products:qr-grid' %}">Product QR Grid</a>
+                            <a class="dropdown-item dropdown-item-blue" href="{% url 'bespoke-shipping:qr-grid' %}">Seller QR  Grid</a>
                         </div>
                     </li>
                     {% else %}
