listing all deliveries for the logged in user

--- a/deliveries/templates/deliveries.html
+++ b/deliveries/templates/deliveries.html
@@ -6,8 +6,9 @@
 
 {% block content %}
     <div class="container body-padding">
-        <h1>Your shipping order has been completed</h1>
-        <span>Thank you for shipping through Vintage Love!</span>
+        {% for delivery in deliveries %}
+            {{ delivery }} <br>
+        {% endfor %}
     </div>
 
 {% endblock %}
