--- a/bespokeShipping/templates/quote-payment-complete.html
+++ b/bespokeShipping/templates/quote-payment-complete.html
@@ -9,8 +9,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Thank you!</h1>
-            <p>Your shippment has been paid for and is on the way!</p>
+            <h1>Thank You for Choosing Global Vintage Love!</h1>
+            <p>We will be in touch with details on pickup and delivery dates shortly.</p>
         </div>
     </div>
 </div>
