--- a/bespokeShipping/templates/create-quote.html
+++ b/bespokeShipping/templates/create-quote.html
@@ -134,6 +134,9 @@
                         </div>
                     </div>
                 {% endfor %}
+                <div class="col-12">
+                    {{ shipping_notes.as_p }}
+                </div>
             </div>
 
             <div class="row text-center">
