--- a/deliveries/templates/associate_assignment.html
+++ b/deliveries/templates/associate_assignment.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p>Date: {{ assignment_date }}</p>
-                <p>Vehical: {{ assignment_driver }}</p>
+                <p>Vehicle: {{ assignment_driver }}</p>
             </div>
         </div>
         <form method="post">
