--- a/deliveries/templates/create_assignment.html
+++ b/deliveries/templates/create_assignment.html
@@ -11,58 +11,10 @@
         <form method="post">
             <h1>Pickups</h1>
             {% csrf_token %}
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <td>Select</td>
-                        <td>Shipping ID</td>
-                        <td>Date Received</td>
-                        <td>Store Name</td>
-                        <td>Address</td>
-                        <td>Description</td>
-                        <td>Notes</td>
-                        <td>Requested Date</td>
-                </tr>
-                </thead>
-                <tbody>
-                {% for shipping in form %}
-                    <tr>
-                        <td><input type="checkbox" name="shippings" value="{{ shipping.0.0 }}" id="id_shippings_{{ forloop.counter0 }}"></td>
-                        <td>{{ shipping.1.id }}</td>
-                        <td>{{ shipping.1.create_datetime }}</td>
-                        <td>{{ shipping.1.from_name }}</td>
-                        <td>{{ shipping.1.from_address }}</td>
-                        <td>{{ shipping.1.description }}</td></td>
-                        <td>{{ shipping.1.notes }}</td>
-                        <td>{{ shipping.1.requested_date }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            {% include 'pickup_table.html' %}
 
             <h1>Deliveries</h1>
-            {% csrf_token %}
-            <table class="table table-bordered table-striped">
-                <thead>
-                    <tr>
-                        <td>Select</td>
-                        <td>Address</td>
-                        <td>Notes</td>
-                        <td>Requested Date</td>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for shipping in form %}
-                    <tr>
-                        <td><input type="checkbox" name="shippings" value="{{ shipping.0.0 }}" id="id_shippings_{{ forloop.counter0 }}"></td>
-                        <td>{{ shipping.1.id }}</td>
-                        <td>{{ shipping.1.to_address }}</td>
-                        <td>{{ shipping.1.notes }}</td>
-                        <td>{{ shipping.1.requested_date }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            {% include 'delivery_table.html' %}
 
             {{ date_driver_form.as_p }}
             <input class="btn btn-primary blue-button rounded-3 mb-5 mt-2" type="submit" value="Next">
