--- a/bespokeShipping/templates/complete-quote.html
+++ b/bespokeShipping/templates/complete-quote.html
@@ -6,7 +6,8 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Quote Created</h1>
-            <p>An e-mail has been sent to {{ email }}</p>
+            <p>An e-mail has been sent to {{ quote.to_email }}</p>
+            <p><a href="{% url 'bespoke-shipping:pay-quote' quote.encoding %}">globalvintagelove.com{% url 'bespoke-shipping:pay-quote' quote.encoding %}</a></p>
         </div>
     </div>
 </div>
