--- a/bespokeShipping/templates/create-quote.html
+++ b/bespokeShipping/templates/create-quote.html
@@ -67,15 +67,15 @@
             <div class="row text-start pt-4">
                 <div class="col-12 col-md-6">
                     <h5>Ship Item To</h5>
-                    <table>
+                    <table class="table">
                         {{ ship_to_form.as_table }}
                     </table>
                 </div>
                 <div class="col-12 col-md-6 pt-4 pt-md-0">
                     <h5>Ship Item From</h5>
                     {% if from_form %}
-                    <table>
-                        {{ ship_from_form.as_table }}
+                    <table class="table" id="from-form">
+                        {{ from_form.as_table }}
                     </table>
                     {% else %}
                         <div id="from-seller" class="text-start">
