Add pickup and delivery requested dates

--- a/deliveries/templates/delivery_table.html
+++ b/deliveries/templates/delivery_table.html
@@ -19,8 +19,8 @@
                         {% else %}
                             <td>&nbsp;</td>
                         {% endif %}
-                        {% if delivery.1.requested_date %}
-                            <td>{{ delivery.1.requested_date }}</td>
+                        {% if delivery.1.delivery_requested_date %}
+                            <td>{{ delivery.1.delivery_requested_date }}</td>
                         {% else %}
                             <td>&nbsp;</td>
                         {% endif %}
