--- a/deliveries/templates/pickup_table.html
+++ b/deliveries/templates/pickup_table.html
@@ -29,8 +29,8 @@
                         {% else %}
                             <td>&nbsp;</td>
                         {% endif %}
-                        {% if pickup.1.requested_date %}
-                            <td>{{ pickup.1.requested_date }}</td>
+                        {% if pickup.1.pickup_requested_date %}
+                            <td>{{ pickup.1.pickup_requested_date }}</td>
                         {% else %}
                             <td>&nbsp;</td>
                         {% endif %}
