--- a/deliveries/templates/pickup_table.html
+++ b/deliveries/templates/pickup_table.html
@@ -1,4 +1,5 @@
-            <table class="table table-bordered table-striped">
+{% load date_functions %}
+            <table class="table table-bordered table-striped table-sm">
                 <thead>
                     <tr>
                         <td>Select</td>
@@ -13,7 +14,7 @@
                 </thead>
                 <tbody>
                 {% for pickup in pickups %}
-                    <tr>
+                    <tr {% if pickup.1.create_datetime|days_from >= 3 %}style="background: red"{% elif pickup.1.create_datetime|days_from >= 2 %}style="background: yellow"{% endif %}>
                         <td><input type="checkbox" name="pickups" value="{{ pickup.1.id }}" id="id_pickups_{{ forloop.counter0 }}"></td>
                         <td>{{ pickup.1.id }}</td>
                         <td>{{ pickup.1.create_datetime }}</td>
