--- a/deliveries/templates/deliveries.html
+++ b/deliveries/templates/deliveries.html
@@ -3,7 +3,6 @@
 
 {% block page_title %}Global Vintage Love | My Deliveries{% endblock %}
 
-
 {% block content %}
     <div class="container body-padding">
         <table class="table table-hover">
@@ -15,6 +14,7 @@
                     <th scope="col">To</th>
                     <th scope="col">Item(s)</th>
                     <th scope="col">Timeframe</th>
+                    <th scope="col">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,6 +40,16 @@
                         {% endif %}
                         <td>{{ delivery.shipping.description }}</td>
                         <td>{{ delivery.shipping.order_window }}</td>
+                        <td>
+                        {% if delivery.complete %}
+                            <p>Complete</p>
+                        {% elif delivery.blocked %}
+                            <p>Non-Complete</p>
+                        {% else %}
+                            <button id="complete-{{ delivery.id }}" value="{% url 'deliveries:complete-assignment' delivery.id %}" class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-1" style="background: #0f5132; width: 10rem;" onclick="process_delivery(this)">Complete</button>
+                            <button id="block-{{ delivery.id }}" value="{% url 'deliveries:block-assignment' delivery.id %}" class="btn btn-primary blue-w-orange-button rounded-3 mt-1 mb-1" style="background: #6a1a21; width: 10rem;" onclick="process_delivery(this)">Non-Complete</button>
+                        {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
@@ -47,4 +57,8 @@
         </table>
     </div>
 
+{% endblock %}
+{% block end_body %}
+    <script src="{% get_static_prefix %}js/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'js/delivery_functions.js' %}"></script>
 {% endblock %}
