--- a/deliveries/templates/associate_assignment.html
+++ b/deliveries/templates/associate_assignment.html
@@ -17,6 +17,19 @@
                 <p>Vehicle: {{ assignment_driver }}</p>
             </div>
         </div>
+        {% if form.errors %}
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="alert alert-danger">
+                        <ul>
+                            {% for error in form.errors %}
+                                <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
         <form method="post">
             {% csrf_token %}
             <table class="table table-bordered table-striped">
@@ -36,34 +49,29 @@
             </thead>
             <tbody>
                 {% for form in forms %}
-
                 <tr>
-                    <td>{{ form.0.shipping }}</td>
-                    {% if form.2 %}
-                    <td><input type="number" name="{{ form.0.sequence.html_name }}" min="1" max="100" id="{{ form.0.sequence.id_for_label }}" value="{{ form.2 }}"></td>
+                    <td>{{ form.1.0 }}</td>
+                    {% if form.1.1 %}
+                    <td><input type="number" name="{{ form.0.sequence.html_name }}" min="1" max="100" id="{{ form.0.sequence.id_for_label }}" value="{{ form.1.3 }}"></td>
                     {% else %}
                     <td>{{ form.0.sequence }}</td>
                     {% endif %}
-                    {% if form.3 == 'Pickup' %}
-                    <td>{{ form.3 }}</td>
-                    <td>{{ form.1.to_address }}</td>
-                    <td>{{ form.1.notes }}</td>
-                    <td>{{ form.1.pickup_requested_date }}</td>
+                    {% if form.1.2 %}
+                    <td>Pickup</td>
                     {% else %}
-                    <td>{{ form.3 }}</td>
-                    <td>{{ form.1.to_address }}</td>
-                    <td>{{ form.1.notes }}</td>
-                    <td>{{ form.1.delivery_requested_date }}</td>
+                    <td>Delivery</td>
                     {% endif %}
-
+                    <td>{{ form.1.0.to_address }}</td>
+                    <td>{{ form.1.0.notes }}</td>
+                    <td>{{ form.1.0.pickup_requested_date }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
             </table>
 
             <input class="btn btn-primary blue-button rounded-3 mb-5 mt-2" type="submit" value="Next">
-            <button class="btn btn-primary blue-button rounded-3 mb-5 mt-2" value="Print" onclick="window.print();">Print</button>
         </form>
+        <button class="btn btn-primary blue-button rounded-3 mb-5 mt-2" value="Print" onclick="window.print();">Print</button>
     </div>
 
 {% endblock %}
